tests/errors/poly-mismatch.expect
---CODE---
1
---STDERR---
error: source port must be available longer than the destination port requires
   ┌─ tests/errors/poly-mismatch.fil:12:28
   │
12 │     a := new Add[#W]<G+#W>(s.out, acc);
   │                            ^^^^^ source is available for @[G+#N, G+#N+1]
   │
   ┌─ ./primitives/./comb.fil:9:13
   │
 9 │     @[G, L] left: #IN_WIDTH,
   │             ---- destination's requirement @[G+#W, G+#W+1]

error: source port must be available longer than the destination port requires
   ┌─ tests/errors/poly-mismatch.fil:12:35
   │
12 │     a := new Add[#W]<G+#W>(s.out, acc);
   │                                   ^^^ source is available for @[G+#N, G+#N+1]
   │
   ┌─ ./primitives/./comb.fil:10:13
   │
10 │     @[G, L] right: #IN_WIDTH,
   │             ----- destination's requirement @[G+#W, G+#W+1]

error: source port must be available longer than the destination port requires
   ┌─ tests/errors/poly-mismatch.fil:13:11
   │
13 │     out = a.out;
   │     ----  ^^^^^ source is available for @[G+#W, G+#W+1]
   │     │      
   │     destination's requirement @[G+#N, G+#N+1]

error: source port must be available longer than the destination port requires
   ┌─ tests/errors/poly-mismatch.fil:20:11
   │
20 │     out = s.out;
   │     ----  ^^^^^ source is available for @[G+2, G+3]
   │     │      
   │     destination's requirement @[G+4, G+5]

Compilation failed with 4 errors.
Run with --show-models to generate assignments for failing constraints.
